--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-{{title}}
+<span class="my-span">{{title}}</span>
+<app-new1></app-new1>
+<app-module1 [inputParam6]="'parentText'" (userChange)="changeTitle($event)"></app-module1> 
